Added logs
-Added logs to all classes that were missing them